MEM-237 - MMTI Mine List Page Design
- Removing unused files
- Configuring routes for new pages (see below)
- Updating markup for project.abstract.html, projects.abstract.html
- Adding topics/client/views/topics-of-interest.html
- Adding home/client/views/home.html

--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -21,7 +21,7 @@
 							<a href="#">Topics of Interest</a>
 						</li>
 						<li>
-							<a href="#">Find Mines in British Columbia</a>
+							<a href ui-sref="project">Find Mines in British Columbia</a>
 						</li>
 					</ul>
 					<h5>Our Processes &amp; Procedures</h5>
