--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -26,11 +26,11 @@
 						<a class="dropdown-item" href="mining-lifecycle.html">
 							<strong>The Mining Lifecycle</strong>
 							<span class="dd-item-desc">It can take decades to develop a deposit into a mine, which in turn can operate for decades.</span></a>
-						<a class="dropdown-item" href="topics-of-interest.html">
+						<a class="dropdown-item" href="topics-of-interest">
 							<strong>Topics of Interest</strong>
 							<span class="dd-item-desc">Tailings Management, Water Quality, Reclamation &amp; Securities</span>
 						</a>
-						<a class="dropdown-item" href="#">
+						<a class="dropdown-item" href ui-sref="projects">
 							<strong>Find Mines in BC</strong>
 							<span class="dd-item-desc">The BC Mine Information website’s interactive map currently includes 10 mine sites.</span></a>
 					</div>
