MEM-237 MMTI - Mine List Page Design
- Adding new content pages
- Updated client routes
- Adding appropriate links into header.client.view.html and footer.client.view.html

--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -15,25 +15,25 @@
 					<h5>About Mining in British Columbia</h5>
 					<ul>
 						<li>
-							<a href="#">The Mining Lifecycle</a>
+							<a ui-sref="mining-lifecycle">The Mining Lifecycle</a>
 						</li>
 						<li>
-							<a href="#">Topics of Interest</a>
+							<a ui-sref="topics">Topics of Interest</a>
 						</li>
 						<li>
-							<a href ui-sref="project">Find Mines in British Columbia</a>
+							<a ui-sref="project">Find Mines in British Columbia</a>
 						</li>
 					</ul>
 					<h5>Our Processes &amp; Procedures</h5>
 					<ul class="mb-0">
 						<li>
-							<a href="legislation.html">Legislation</a>
+							<a ui-sref="legislation">Legislation</a>
 						</li>
 						<li>
-							<a href="authorizations.html">Authorizations</a>
+							<a ui-sref="authorizations">Authorizations</a>
 						</li>
 						<li>
-							<a href="compliance-oversight.html">Compliance Oversight</a>
+							<a ui-sref="compliance-oversight">Compliance Oversight</a>
 						</li>
 					</ul>
 				</section>
