--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -23,14 +23,15 @@
 						aria-expanded="false"><span>Mining in British Columbia</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="aboutMMTI">
-						<a class="dropdown-item" href="mining-lifecycle.html">
+						<a class="dropdown-item" ui-sref="mining-lifecycle">
 							<strong>The Mining Lifecycle</strong>
-							<span class="dd-item-desc">It can take decades to develop a deposit into a mine, which in turn can operate for decades.</span></a>
-						<a class="dropdown-item" href="topics-of-interest">
+							<span class="dd-item-desc">It can take decades to develop a deposit into a mine, which in turn can operate for decades.</span>
+						</a>
+						<a class="dropdown-item" ui-sref="topics">
 							<strong>Topics of Interest</strong>
 							<span class="dd-item-desc">Tailings Management, Water Quality, Reclamation &amp; Securities</span>
 						</a>
-						<a class="dropdown-item" href ui-sref="projects">
+						<a class="dropdown-item" ui-sref="projects">
 							<strong>Find Mines in BC</strong>
 							<span class="dd-item-desc">The BC Mine Information website’s interactive map currently includes 10 mine sites.</span></a>
 					</div>
@@ -42,13 +43,13 @@
 						aria-expanded="false"><span>Our Processes &amp; Procedures</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="aboutMMTI">
-						<a class="dropdown-item" href="legislation.html">
+						<a class="dropdown-item" ui-sref="legislation">
 							<strong>Legislation</strong>
 							<span class="dd-item-desc">Learn about the key statutes and regulations that apply to all mining activities in the Province of British Columbia.</span></a>
-						<a class="dropdown-item" href="authorizations.html">
+						<a class="dropdown-item" ui-sref="authorizations">
 							<strong>Authorizations</strong>
 							<span class="dd-item-desc">Environmental assessment certificates and permits issued under the Mines Act and Environmental Management Act.</span></a>
-						<a class="dropdown-item" href="compliance-oversight.html">
+						<a class="dropdown-item" ui-sref="compliance-oversight">
 							<strong>Compliance Oversight</strong>
 							<span class="dd-item-desc">Several provincial agencies work together to provide integrated oversight of British Columbia’s mines.</span></a>
 					</div>
