MEM-237 MMTI - Mine List Page Design
- Adding home page routes / links

--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -21,7 +21,7 @@
 							<a ui-sref="topics">Topics of Interest</a>
 						</li>
 						<li>
-							<a ui-sref="project">Find Mines in British Columbia</a>
+							<a ui-sref="projects">Find Mines in British Columbia</a>
 						</li>
 					</ul>
 					<h5>Our Processes &amp; Procedures</h5>
