--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,7 +1,7 @@
 
 <header id="header">
 	<div class="brand-container">
-		<a class="brand" href="index.html"></a>
+		<a class="brand" ui-sref="home"></a>
 		<button class="navbar-toggler float-right collapsed" type="button" 
 			data-toggle="collapse" 
 			data-target="#mainNav" 
