--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -8,7 +8,7 @@
                     <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">Alpha 2.0</span></h1>
                     <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
                     <div class="hb-btns">
-                        <a class="btn slide-l-btn hero-btn inverted" href ui-sref="project"><i class="material-icons">list</i><span>View List</span></a>
+                        <a class="btn slide-l-btn hero-btn inverted" href ui-sref="find-mines-in-british-columbia"><i class="material-icons">list</i><span>View List</span></a>
                         &nbsp;&nbsp;<span>or</span>&nbsp;&nbsp;
                         <a class="btn slide-l-btn hero-btn inverted" href ui-sref="project"><i class="material-icons">map</i><span>View Map</span></a>
                     </div>
@@ -72,21 +72,21 @@
                         <div class="feature-block">
                             <h3>The Mining Lifecycle</h3>
                             <p>It can take decades to develop a deposit into a mine, which in turn can operate for decades</p>
-                            <a class="btn inverted" href="mining-lifecycle.html">Learn More</a>
+                            <a class="btn inverted" ui-sref="mining-lifecycle">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="feature-block">
                             <h3>Topics of Interest</h3>
                             <p>Profiling key topics of interest regarding mining activities in British Columbia</p>
-                            <a class="btn inverted" href="topics-of-interest.html">Learn More</a>
+                            <a class="btn inverted" ui-sref="topics">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="feature-block">
                             <h3>Find Mines in B.C.</h3>
                             <p>The BC Mine Information website’s interactive map currently includes 15 mine sites</p>
-                            <a class="btn inverted" href="mine-list.html">View List</a>
+                            <a class="btn inverted" ui-sref="projects">View List</a>
                         </div>
                     </div>
                 </div>
@@ -101,21 +101,21 @@
                         <div class="feature-block">
                             <h3>Legislation</h3>
                             <p>Learn about the key statutes and regulations that apply to all mining activities in the Province of British Columbia</p>
-                            <a class="btn inverted" href="legislation.html">Learn More</a>
+                            <a class="btn inverted" ui-sref="legislation">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="feature-block">
                             <h3>Authorizations</h3>
                             <p>Environmental assessment certificates and permits issued under the Mines Act and Environmental Management Act</p>
-                            <a class="btn inverted" href="authorizations.html">Learn More</a>
+                            <a class="btn inverted" ui-sref="authorizations">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="feature-block">
                             <h3>Compliance Oversight</h3>
                             <p>Several provincial agencies work together to provide integrated oversight of British Columbia’s mining sector</p>
-                            <a class="btn inverted" href="compliance-oversight.html">Learn More</a>
+                            <a class="btn inverted" ui-sref="compliance-oversight">Learn More</a>
                         </div>
                     </div>
                 </div>
