MEM-237 - MMTI - Mine List Page Design
- Adding utils.js
- Adding branding / sample imagery and removing old /img folder
- Adding .scss directories and files for various pages
- Moving references to JQuery / Bootstrap before other scripts are loaded (layout.server.view.html)
- Commenting out old branding image and repathing the favicon location (default.js)

--- a/modules/core/client/scss/components/buttons.scss
+++ b/modules/core/client/scss/components/buttons.scss
@@ -42,7 +42,8 @@
         //font-size: 0.875rem;
     }
 
-    &:hover {
+    &:hover,
+    &:focus {
         text-decoration: none;
 
         i, span {
