--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -21,3 +21,7 @@
 @import "components/site-activities.scss";
 @import "components/sort-header.scss";
 @import "components/tab-nav.scss";
+
+// Pages
+@import "modules/home/client/scss/home.scss";
+@import "modules/projects/client/scss/projects.scss";
