--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,7 +1,7 @@
 
 <header id="header">
 	<div class="brand-container">
-		<a class="brand" ui-sref="home"></a>
+		<a class="brand" ui-sref="home" tabindex="0"></a>
 		<button class="navbar-toggler float-right collapsed" type="button" 
 			data-toggle="collapse" 
 			data-target="#mainNav" 
@@ -17,13 +17,13 @@
 				<li class="nav-item"><a class="nav-link">Find Mines in British Columbia</span></a></li>
 				-->
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" id="aboutMMTI" 
+					<a class="nav-link dropdown-toggle" id="aboutMMTI" tabindex="0"
 						data-toggle="dropdown" 
 						aria-haspopup="true" 
 						aria-expanded="false"><span>Mining in British Columbia</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="aboutMMTI">
-						<a class="dropdown-item" ui-sref="mining-lifecycle">
+						<a class="dropdown-item" ui-sref="mining-lifecycle" tabindex="0">
 							<strong>The Mining Lifecycle</strong>
 							<span class="dd-item-desc">It can take decades to develop a deposit into a mine, which in turn can operate for decades.</span>
 						</a>
