--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="container-inner">
                 <div class="hb-txt">
-                    <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">Alpha 2.0</span></h1>
+                    <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">V 2.0</span></h1>
                     <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
                     <div class="hb-btns">
                         <a class="btn slide-l-btn hero-btn inverted" href ui-sref="find-mines-in-british-columbia"><i class="material-icons">list</i><span>View List</span></a>
