MEM-252: Hardcode email for C&E details.

--- a/modules/projects/client/views/project-partials/project-tombstone.html
+++ b/modules/projects/client/views/project-partials/project-tombstone.html
@@ -100,7 +100,7 @@
 					<span class="value">
 						<span>{{ ::project.CELead | stripIDR }}</span><br/>
 						<span>Phone:&nbsp;&nbsp;{{ ::project.CELeadPhone }}</span><br/>
-						<span>Email:&nbsp;&nbsp;<a href="mailto:{{ ::project.CELeadEmail }}">{{ ::project.CELeadEmail }}</a></span>
+						<span>Email:&nbsp;&nbsp;<a href="mailto:eao.compliance@gov.bc.ca">eao.compliance@gov.bc.ca</a></span>
 					</span>
 				</div>
 			</div>
