MEM-232 - MMTI Map Search/Filter
- Adding map views
- Cleaning up styling / markup
- removing CSS files that are unused.

--- a/modules/home/client/scss/home.scss
+++ b/modules/home/client/scss/home.scss
@@ -1,5 +1,12 @@
 
 // Home Page
+
+// Banner Images
+.hero-banner {
+    background-image: url("/modules/core/client/images/sample-bg-img-duotone.jpg");
+    background-repeat: no-repeat;
+}
+
 .site-intro {
     .fast-facts {
         margin-top: 2.5rem;
