--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -130,7 +130,7 @@ header {
         border-bottom-style: solid;
         border-bottom-width: 0;
         border-bottom-color: transparent;
-        background-color: rgba($header-bg, 0.8);
+        background-color: rgba($header-bg, 0);
         transition: all linear 0.2s;
 
         &.dark {
@@ -150,7 +150,8 @@ header {
     }
 
     .brand {
-        margin: 0.25rem;
+        margin-top: 0.2rem;
+        margin-left: 0.25rem;
         width: 170px; // Using PX dimensions here to ensure exact match to image
         height: 3.5rem;
         background-image: url("/modules/core/client/images/bcgov-logo-horiz-LG.png");
