--- a/modules/core/client/views/404.client.view.html
+++ b/modules/core/client/views/404.client.view.html
@@ -1,12 +1,12 @@
-<div class="main-panel">
-    <div class="view-title-container">
-        <h1>Page Not Found</h1>
-    </div>
-    <div class="view-body-container">
-        <p>The page you have requested could not be found.</p>
-        <p>
-            <a class="btn btn-sm btn-primary" ui-sref="projects" href>
-                <span class="glyphicon glyphicon-chevron-left"></span><span>Back to Home</span></a>
-        <p>
+
+<div class="container">
+    <h1>Page Not Found</h1>
+    <p>The page you have requested could not be found.</p>
+
+    <div class="content-btns">
+        <a class="btn slide-l-btn content-btn" ui-sref="home">
+            <i class="material-icons">keyboard_backspace</i><span>Back to Home</span>
+        </a>
     </div>
 </div>
+
