--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -11,7 +11,7 @@
 
 			<div class="col-md-4">
 				<section>
-					<h4>Site Navigation</h4>
+					<h4>Navigate</h4>
 					<h5>About Mining in British Columbia</h5>
 					<ul>
 						<li>
@@ -42,7 +42,7 @@
 			<div class="col-md-4">
 				<section>
 					<h4>Connect With Us</h4>
-					<p>The BC Mine Information website is continuously evolving. More information and features will be added to the site on an ongoing basis. We welcome feedback to help us decide what would be most valuable.</p>
+					<p>BC Mine Information is continuously evolving. More information and features will be added to the site on an ongoing basis and we welcome feedback to help us decide what would be most valuable.</p>
 					<a class="btn slide-r-btn inverted" href="#"><span>Submit Feedback</span><i class="material-icons">arrow_forward</i></a>
 				</section>
 			</div>
