MEM-254: Imports for project, project details, authorization page, compliance page.

--- a/modules/projects/client/views/project-partials/modal-project-import.html
+++ b/modules/projects/client/views/project-partials/modal-project-import.html
@@ -1,4 +1,4 @@
-<div class="modal-header" style="opacity: 100; position:fixed;">
+<div class="modal-header">
 	<h3 class="modal-title">Import Projects</h3>
 </div>
 
