MEM-238 MMTI - Finalize MMTI Website Branding

--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -8,7 +8,7 @@
                 <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
                 <div class="hb-btns">
                     <a class="btn slide-l-btn hero-btn inverted" href ui-sref="projects"><i class="material-icons">list</i><span>View List</span></a>
-                    &nbsp;&nbsp;<span>or</span>&nbsp;&nbsp;
+                    <span>or</span>
                     <a class="btn slide-l-btn hero-btn inverted" href ui-sref="map"><i class="material-icons">map</i><span>View Map</span></a>
                 </div>
             </div>
