--- a/modules/core/client/scss/global/header.scss
+++ b/modules/core/client/scss/global/header.scss
@@ -1,15 +1,9 @@
 
 header {
     @include clearfix;
-    padding: 0.25rem 0.75rem 0.25rem 0.5rem;
+    padding: 0.5rem;
     background: $header-bg;
     color: $header-font-color;
-}
-
-@media (min-width: 1200px) {
-    header {
-        padding: 0.25rem 0.5rem;
-    }
 }
 
 .brand-container {
@@ -19,15 +13,15 @@ header {
 .brand {
     float: left;
     display: block;
-    width: 140px;
-    height: 50px;
-        background-image: url("/modules/core/client/images/bcgov-logo-horiz-SM.png");
+    width: 240px;
+    height: 40px;
+    background-image: url("/modules/core/client/images/bcgov-logo-horiz-SM.png");
     background-repeat: no-repeat;
     background-size: auto;
 }
 
 .navbar-toggler {
-    margin-top: 0.4rem;
+    margin-top: 0.05rem;
     padding: 0.5rem 0.4rem;
     border: 2px solid $gold;
     color: $gold;
@@ -45,8 +39,19 @@ header {
         margin-bottom: -0.25rem;
 
         + span {
+            display: none;
             margin-left: 0.25rem;
             font-size: 0.85rem;
+        }
+    }
+}
+
+@media (min-width: 400px) {
+    .navbar-toggler {
+        i {
+            + span {
+                display: inline-block;
+            }
         }
     }
 }
@@ -60,7 +65,7 @@ header {
         .nav-link {
             position: relative;
             z-index: 1001; // +1 to keep above dropdown menus
-            padding: 0.875rem 0.5rem;
+            padding: 0.875rem 1rem;
             line-height: 1.2rem;
             border-top: 1px solid $mn-border-color;
             color: $mn-color;
@@ -152,7 +157,7 @@ header {
     .brand {
         margin-top: 0.2rem;
         margin-left: 0.25rem;
-        width: 170px; // Using PX dimensions here to ensure exact match to image
+        width: 380px; // Using PX dimensions here to ensure exact match to image
         height: 3.5rem;
         background-image: url("/modules/core/client/images/bcgov-logo-horiz-LG.png");
         background-size: auto;
