--- a/modules/lifecycle/client/views/mining-lifecycle.html
+++ b/modules/lifecycle/client/views/mining-lifecycle.html
@@ -1,7 +1,5 @@
 
-<!-- Mining Lifecycle Page -->
-
-<div class="hero-banner sample-pg-banner">
+<div class="hero-banner">
     <div class="container">
         <div class="container-inner">
             <div class="hb-txt">
